docker-compose.yml
Signed-off-by: Wizard Loop <67387949+WizardLoop@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,6 @@ services:
     init: true
     tty: true
     volumes:
-      - ./app:/app
-    command: php /app/bot.php
+      - ./:/app  
+    working_dir: / 
+    command: php bot.php
