--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
   "name": "wizardloop/shabbat",
   "description": "A robot for changing the Telegram group's permissions at the entrance and exit of Shabbat.",
+  "type": "project",
   "require": {
+    "php": "^8.2",
     "danog/madelineproto": "^8.4"
   },
   "license": "MIT",
@@ -10,9 +12,9 @@
       "name": "WizardLoop"
     }
   ],
-  "autoload": {
+ "autoload": {
     "psr-4": {
-      "WizardLoop\\Shabbat\\": ""
+      "Shabbat\\": ""
     }
   }
 }
